syntax = "proto3";

package eslint;

service checkServer {
  rpc checkRpc (getFile) returns (checkFile) {}
}

message getFile {
  bytes files = 1;
}

message checkFile {
  string checkResult = 1;
}
